<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/view_helper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/activity"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/view_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_empty_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/not_exists_contents"
            android:textColor="@android:color/primary_text_light"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_network_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_network_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/network_error_message"
            android:textColor="@android:color/primary_text_light"
            android:textSize="14sp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_network_retry"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:background="@color/grey"
            android:text="@string/retry"
            android:textColor="@color/text_primary_light"
            app:theme="@style/Button.Grey.Bright"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
</FrameLayout>