<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.UserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/blue"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/textview_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:padding="8dp"
            android:textColor="@color/text_primary_light"
            android:textSize="16sp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:text="@string/email"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/textview_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:text="@string/password"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/textview_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:text="@string/masked_password"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/email_validation_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="14dp"
                        android:singleLine="true"
                        android:text="@string/please_validate_email_address"
                        android:textColor="@color/blue_dark"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/textview_email_validation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:padding="14dp"
                        android:singleLine="true"
                        android:text="@string/could_not_get_a_validation_email"
                        android:textColor="@color/text_primary_dark"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <include layout="@layout/helper_view"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:background="@drawable/elevation_shadow_down"/>

    </FrameLayout>

</LinearLayout>
