<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pexels_photo" />

    <LinearLayout
        android:id="@+id/user_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.kindabear.radiople.view.sizingimageview.CircleSizingImageView
            android:id="@+id/imageview_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <android.support.v4.widget.Space
            android:layout_width="6dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/text_primary_light"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guest_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_for_world_peace"
            android:textColor="@color/text_primary_light"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:theme="@style/Button.White" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_weight="1"
                android:text="@string/signup"
                android:textColor="@color/blue"
                android:textSize="12sp"
                app:theme="@style/Button.White" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
