<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:orientation="vertical"
             tools:context=".ui.SignupActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pexels_photo"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/image_filter"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:paddingTop="?android:attr/actionBarSize"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:textColorHint="@color/text_hint_light">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="12dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/text_primary_light"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"
                android:textColorHint="@color/text_hint_light">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edittext_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/text_primary_light"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/text_hint_light">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/text_primary_light"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/confirm_signup"
                android:textSize="12sp"
                app:theme="@style/Button.Blue"/>
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbar_transparent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
</FrameLayout>